force-app/main/default/objects/Task_Monitor__c/Task_Monitor__c.object-meta.xml
<CustomObject>
    <label>Task Monitor</label>
    <nameField>
        <label>Task Monitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks Monitor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>