force-app/main/default/objects/Task_Monitor__c/fields/Difficulty_val__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_val__c</fullName>
    <formula>Case(Difficulty__c,&quot;Trivial&quot;,2,&quot;Easy&quot;,3,&quot;Medium&quot;,4,&quot;Hard&quot;,5,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difficulty val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>