force-app/main/default/objects/Task_Monitor__c/fields/Habit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Habit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habit Complete</label>
    <type>Checkbox</type>
</CustomField>