force-app/main/default/objects/Task_Monitor__c/fields/Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded__c</fullName>
    <label>Points Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>